Merged. Removed unnecessary stuff. Rewrite some methods. (#9)
* push branch

* push branch

* Booking DAO done.
Respective tests done.

* Directory rename for clarity.

* Flights dao done + tests

* Interfaces added to DAOs.

* x

* Services and controllers finished. Random flight generation added. Structure overlook.

* console base add.

* ticket deleted

* Removed unnecessary files.
Added logging to FlightsDAO and BookingsDAO.
Removed unnecessary methods. (read -> getById)
Rewrite saveAll methods.
Fixed authenticate method (was working with map instead of DAO)
Changed some methods names.
Temporarily removed all tests.