@@ -7,10 +7,7 @@ import java.io.IOException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public class FlightsController {
     private static final int minSeats = 50;
@@ -40,9 +37,13 @@ public class FlightsController {
     }
 
     public List<Flight> generateRandom(int amount) throws IOException {
-        return IntStream.range(0, amount)
-                .mapToObj(i -> generateRandom())
-                .collect(Collectors.toList());
+        ArrayList<Flight> fs = new ArrayList<>();
+
+        for (int i = 0; i < amount; i++) {
+            fs.add(generateRandom());
+        }
+
+        return fs;
     }
 
     public List<Flight> getAllDepartingIn(int hours) throws IOException {
@@ -51,10 +52,6 @@ public class FlightsController {
 
     public Flight create(City origin, City destination, Airline airline, double ticketCost, long departureTime, int maxPassengers) throws IOException {
         return service.create(origin, destination, airline, ticketCost, departureTime, maxPassengers);
-    }
-
-    public void clear() throws IOException {
-        service.clear();
     }
 
     public void delete(Flight f) throws IOException {
@@ -73,21 +70,17 @@ public class FlightsController {
         return service.getAll();
     }
 
-    public Optional<Flight> read(String id) throws IOException {
-        return service.read(id);
-    }
-
     public void save(Flight b) throws IOException {
         service.save(b);
     }
 
-    public void saveAll(List<Flight> xs) throws IOException {
-        service.saveAll(xs);
+    public void save(List<Flight> xs) throws IOException {
+        service.save(xs);
     }
 
-    public List<Flight> searchFlight(City origin, City destination) throws IOException {
+    public List<Flight> search(City origin, City destination) throws IOException {
         return service.getAll().stream()
                 .filter(f -> f.getOrigin().equals(origin) && f.getDestination().equals(destination))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
